@@ -4,6 +4,8 @@
  - Fix parsing ComplexTypes which have no child elements (#50)
  - Handle xsi:type attributes on anyType's correctly when deserializing 
    responses (#17)
+ - Fix xsd:restriction on xsd:simpleType's when the base type wasn't defined
+   yet. (#59)
 
 
 0.7.1 (2016-06-01)
